# SeqAttack

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run.sh
commands/: attack.py
conll2003-attack-outputs/: output_deepwordbug  output_deepwordbug.json  output_textfooler  output_textfooler.json
seqattack/attacks/: morpheus.py  ner_clare.py  textfooler.py
seqattack/datasets/: huggingfacener.py
seqattack/goal_functions/: untargeted_ner.py
seqattack/models/: ner.py
seqattack/utils/: __init__.py  attack.py  attack_runner.py
timex-tests/: config.json  timeexpr_seqattack.jsonl  timeexpr_seqattack_nonempty.jsonl
