[tool.poetry]
name = "seqattack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
torch = "2.8.0"
textattack = { path = "lib/textattack", develop = true }
tensorflow = "2.18.0"
tensorflow-hub = "0.16.1"
pygit2 = "1.18.2"
python-Levenshtein = "0.26.0"
seqeval = "1.2.2"
openattack = "2.1.1"
datasets = "4.0.0"
tqdm = ">=4.66.0"
numpy = ">=1.26.0,<2.0.0"
protobuf = ">=3.20.0,<6.0.0"
pydantic = ">=2.0.0,<3.0.0"
transformers = "4.55.4"
tokenizers = ">=0.20.0"
huggingface-hub = ">=0.26.0"
pytest = "^8.4.1"


[tool.poetry.group.dev.dependencies]
ipython = "^9.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
